Media query page accueil

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                     <div class="introduction__search-box">
                         <i class="fa fa-map-marker"></i>
                             <input class="search-txt" type="text" name="search" placeholder="Ville, Quartier"/>      
-                    </div>   
+                    </div>  
+            </section>  
                 
                 <div class="introduction__present">
                     <h1>Réservez le menu qui vous convient</h1>
                         <p>Découvrez des restaurants d'exeption, selectionnés par nos soins</p>
                     <button class="bouton__explore">Explorer nos restaurants</button>
                 </div>
-            </section> 
             
             <nav>
                     <h3>Fonctionnement</h3>
@@ -85,9 +85,8 @@
                                             <div class="primary-content__info">
                                                 <h4>La Palette Du Goût</h4>
                                                 <p>Ménilmontant</p>
-                                                <img src="./images\logo\heartoutlinedshape_81110.ico" 
-                                                alt="icon heart" class="heart"/>
                                             </div>
+                                            <i class="far fa-heart fa-2x"></i>
                                 </figure>
                             </a>
                         </article>
@@ -101,7 +100,7 @@
                                                 <h4>La Note Enchantée</h4>
                                                 <p>Charonne</p>
                                             </div>
-                                                <i class="fa fa-heart-o fa-2x"></i>
+                                                <span class="heart"><i class="far fa-heart fa-2x"></i></span>
                                 </figure>
                             </a>
                         </article>
@@ -114,7 +113,7 @@
                                             <h4>À La Française</h4>
                                             <p>Cité Rouge</p>
                                         </div>
-                                            <i class="fa fa-heart-o fa-2x"></i>
+                                            <span class="heart"><i class="far fa-heart fa-2x"></i></span>
                             </a>
                         </article>
 
@@ -126,7 +125,7 @@
                                         <h4>Le Délice Des Sens</h4>
                                         <p>Folie-Méricourt</p>
                                     </div>
-                                        <i class="fa fa-heart-o fa-2x"></i>
+                                        <span class="heart"><i class="far fa-heart fa-2x"></i></span>
                             </a>
                         </article>
                     </div>
