Mise en place animations et mediaquery

--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
                                             <div class="primary-content__info">
                                                 <h4>La Palette Du Goût</h4>
                                                 <p>Ménilmontant</p>
+                                                <div class="heart">
+                                                    <span class="checked">
+                                                        <i class="fas fa-heart fa-2x"></i> 
+                                                    </span>
+                                                    <span class="unchecked">
+                                                        <i class="far fa-heart fa-2x"></i>
+                                                    </span>
+                                                </div>
                                             </div>
-                                            <i class="fas fa-heart fa-2x"></i>
-                                            <i class="far fa-heart fa-2x"></i>
                             </a>
                         </article>
 
@@ -99,7 +105,14 @@
                                                 <h4>La Note Enchantée</h4>
                                                 <p>Charonne</p>
                                             </div>
-                                                <span class="heart"><i class="far fa-heart fa-2x"></i></span>
+                                                <div class="heart">
+                                                    <span class="checked">
+                                                        <i class="fas fa-heart fa-2x"></i> 
+                                                    </span>
+                                                    <span class="unchecked">
+                                                        <i class="far fa-heart fa-2x"></i>
+                                                    </span>
+                                                </div>
                             </a>
                         </article>
 
@@ -111,7 +124,14 @@
                                             <h4>À La Française</h4>
                                             <p>Cité Rouge</p>
                                         </div>
-                                            <span class="heart"><i class="far fa-heart fa-2x"></i></span>
+                                            <div class="heart">
+                                                <span class="checked">
+                                                    <i class="fas fa-heart fa-2x"></i> 
+                                                </span>
+                                                <span class="unchecked">
+                                                    <i class="far fa-heart fa-2x"></i>
+                                                </span>
+                                            </div>
                             </a>
                         </article>
 
@@ -123,7 +143,14 @@
                                         <h4>Le Délice Des Sens</h4>
                                         <p>Folie-Méricourt</p>
                                     </div>
-                                        <span class="heart"><i class="far fa-heart fa-2x"></i></span>
+                                        <div class="heart">
+                                            <span class="checked">
+                                                <i class="fas fa-heart fa-2x"></i> 
+                                            </span>
+                                            <span class="unchecked">
+                                                <i class="far fa-heart fa-2x"></i>
+                                            </span>
+                                        </div>
                             </a>
                         </article>
                     </div>
@@ -147,7 +174,6 @@
                                 <i class="fa-li fa fa-envelope" aria-hidden="true"></i>      
                                     <a href="mailto:hello@openclassrooms.com">Contact</a>
                             </li>
-                        </div>
                 </footer>
         </body>
 
