--- a/menu2.html
+++ b/menu2.html
@@ -30,155 +30,144 @@
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                     <span class="title">
                         <h1>La Note Enchantée</h1>
-                        <i class="far fa-heart fa-2x"></i>
+                            <div class="heart">
+                                <span class="checked">
+                                    <i class="fas fa-heart fa-2x"></i> 
+                                </span>
+                                <span class="unchecked">
+                                    <i class="far fa-heart fa-2x"></i>
+                                </span>
+                            </div>
                     </span>
             </main>
 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+            <div class="container">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Entr</u>ées
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Ravioles de foie gras</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Accompagnées de leur crème à la truffe</p> 
                                             <p>25€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Caviar osciètre</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Sur blini à la farine de blé noir</p>
                                             <p>35€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Homard et espuma de potiron</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Mariné aux zestes d'orange</p>
                                             <p>20€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Foie gras de canard cuit entier</h4>
                                         <div class="primary-content__price">
                                             <p>Confiture de figues et pain toasté</p>
                                             <p>35€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
                 </div>
                 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Plat</u>s
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Noix de coquilles Saint-Jacques</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Sur lit de purée de céleri-rave</p> 
                                             <p>40€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Langoustine poêlée</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Purée de patate douce</p>
                                             <p>35€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Mijoté de queue de boeuf</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Et riz sauvage aux zestes de citron</p>
                                             <p>44€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Dess</u>erts
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Macaron noisette et chocolat</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Glace au caramel brun et sel de Guérande</p> 
                                             <p>18€</p>
                                         </div>
                                 </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Baba au rhum revisité</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Avec son coulis de citron</p>
                                             <p>22€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Tarte au citron meringuée</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Déstructurée</p>
                                             <p>23€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
                 </div>       
         </div>
@@ -186,6 +175,7 @@
         <button class="bouton__explore">
             Commander
         </button>
+    </div>
 
         <footer>              
             <h2>ohmyfood</h2>
