--- a/menu3.html
+++ b/menu3.html
@@ -30,151 +30,143 @@
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                     <span class="title">
                         <h1>À La Française</h1>
-                            <i class="far fa-heart fa-2x"></i>
+                            <div class="heart">
+                                <span class="checked">
+                                    <i class="fas fa-heart fa-2x"></i> 
+                                </span>
+                                <span class="unchecked">
+                                    <i class="far fa-heart fa-2x"></i>
+                                </span>
+                            </div>
                     </span>
             </main>
 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+        <div class="container">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Entr</u>ées
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Tartare de poulpe acidulé</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Aux zestes d'orange</p>
                                             <p>25€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Velouté de légumes d'antan</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Carotte, panaïs, topinambour</p>
                                             <p>35€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Soupe à l'oignon</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Revisitée</p>
                                             <p>20€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
                 </div>
                 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Plat</u>s
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Coquilles Saint-Jacques</h4>
                                         <div class="primary-content__price">
                                             <p>Accompagnées d'une purée de panaïs</p>
                                             <p>40€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Magret de canard</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Et parmentier de pommes de terre</p>
                                             <p>35€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Sur son lit de gnocchis aux légumes</p>
                                             <p>44€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
                 </div>
 
-                <div class="primary-content">
-                    <h3 class="primary-content__uppercase">
+                <div class="content">
+                    <h3 class="content__uppercase">
                         <u>Dess</u>erts
                     </h3>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Pétales de violettes glacés</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Et purée de noisettes</p>
                                             <p>18€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Fondant au chocolat</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Revisité</p>
                                             <p>22€</p>
                                         </div>
                                 </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
+                        </div>
                     </div>
 
-                    <div class="primary-content__setmenu">
-                        <span class="animation__wrapper">
-                                <div class="primary-content__info">
+                    <div class="content__setmenu">
+                        <div class="content__wrapper">
                                     <h4>Millefeuille croustillant</h4>
-                                        <div class="primary-content__price">
+                                        <div class="content__price">
                                             <p>Myrtilles et pâte d’amande</p>
                                             <p>23€</p>
                                         </div>
-                                </div>
+                        </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                        </span>
-                    </div>     
-            
+                    </div>
+                </div>     
         </div>
 
         <button class="bouton__explore">
             Commander
         </button>
+    </div>
 
         <footer>              
             <h2>ohmyfood</h2>
