animation et media query

--- a/menu2.html
+++ b/menu2.html
@@ -22,11 +22,11 @@
                 <a href="index.html">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <img src=".\images\logo\ohmyfood@2x.svg" alt="logo Ohmyfood"/>
+                <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
             </header>
 
             <main>
-                <img src="./images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" 
+                <img src="./images\restaurants\restaurant_note.jpg" 
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                     <span class="title">
                         <h1>La Note Enchantée</h1>
@@ -41,7 +41,7 @@
                     </span>
             </main>
 
-            <div class="container">
+        <div class="container">
                 <div class="content">
                     <h3 class="content__uppercase">
                         <u>Entr</u>ées
@@ -143,7 +143,6 @@
                                             <p>Glace au caramel brun et sel de Guérande</p> 
                                             <p>18€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
                         </div>
                     </div>
@@ -169,13 +168,16 @@
                                                 <i class="fas fa-check-circle fa-2x"></i>
                         </div>
                     </div>
-                </div>       
-        </div>
-    </div>
 
-        <button class="bouton__explore">
-            Commander
-        </button>
+                </div>       
+        
+
+            <span class="command">
+                <button class="bouton__explore">
+                Commander
+                </button>
+            </span>
+        </div>
 
         <footer>              
             <h2>ohmyfood</h2>
