--- a/menu3.html
+++ b/menu3.html
@@ -22,11 +22,11 @@
                 <a href="index.html">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <img src=".\images\logo\ohmyfood@2x.svg" alt="logo Ohmyfood"/>
+                <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
             </header>
 
             <main>
-                <img src="./images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
+                <img src="./images\restaurants\restaurant_française.jpg" 
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                     <span class="title">
                         <h1>À La Française</h1>
@@ -145,7 +145,6 @@
                                             <p>Revisité</p>
                                             <p>22€</p>
                                         </div>
-                                </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
                         </div>
                     </div>
@@ -157,16 +156,17 @@
                                             <p>Myrtilles et pâte d’amande</p>
                                             <p>23€</p>
                                         </div>
-                        </div>
                                                 <i class="fas fa-check-circle fa-2x"></i>
-                    </div>
-                </div>     
-        </div>
-    </div>
+                        </div>
+                    </div>     
+            </div>
 
-        <button class="bouton__explore">
-            Commander
-        </button>
+            <span class="command">
+                <button class="bouton__explore">
+                Commander
+                </button>
+            </span>
+        </div>
     
 
         <footer>              
