--- a/menu4.html
+++ b/menu4.html
@@ -22,11 +22,11 @@
                 <a href="index.html">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <img src=".\images\logo\ohmyfood@2x.svg" alt="logo Ohmyfood"/>
+                <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
             </header>
 
             <main>
-                <img src="./images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
+                <img src="./images\restaurants\restaurant_délice.jpg" 
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                     <span class="title">
                         <h1>Le Délice Des Sens</h1>
@@ -160,13 +160,14 @@
                         </div>
                     </div>
                 </div>       
-        </div>
-    </div>
         
 
+        <span class="command">
             <button class="bouton__explore">
-                Commander
+            Commander
             </button>
+        </span>
+    </div>
         
         <footer>              
             <h2>ohmyfood</h2>
