--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="./font/font-awesome-4.7.0/css/font-awesome.min.css">
             <script src="https://kit.fontawesome.com/bcad5a07b6.js" crossorigin="anonymous"></script>
-            <link rel="icon" type="image/png" sizes="16x16" href=".\images\logo/ohmyfood@2x.svg">
+            <link rel="icon" type="image/svg" sizes="16x16" href=".\images\restaurants/logo_ohmyfood.svg">
             <title>Ohmyfood</title>
         </head>
 
@@ -35,7 +35,7 @@
         
             <header>
                 <a href="#" class="welcome">
-                    <img src="./images\logo\ohmyfood@2x.svg" alt="logo Ohmyfood"/>
+                    <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
                 </a>
             </header>
 
@@ -78,13 +78,13 @@
                     <div class="primary-content__restaurants">
                         <article>
                             <a href="menu1.html">
-                                    <img src=".\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" 
-                                    alt="Assiette garnie sur table de restaurant, corbeille de pain"/>
+                                    <img src=".\images\restaurants\restaurant_palette.jpg" 
+                                    alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                                         <span class="primary-content__new">Nouveau</span>
                                             <div class="primary-content__info">
                                                 <h4>La Palette Du Goût</h4>
                                                 <p>Ménilmontant</p>
-                                            </div>    
+                                            </div>   
                                                     <div class="heart">
                                                         <span class="heart__checked">
                                                             <i class="fas fa-heart fa-2x"></i> 
@@ -92,13 +92,13 @@
                                                         <span class="heart__unchecked">
                                                             <i class="far fa-heart fa-2x"></i>
                                                         </span>
-                                                    </div>
+                                    </div> 
                             </a>
                         </article>
 
                         <article>
                             <a href="menu2.html">
-                                    <img src=".\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" 
+                                    <img src=".\images\restaurants\restaurant_note.jpg" 
                                     alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                                         <span class="primary-content__new">Nouveau</span>
                                             <div class="primary-content__info">
@@ -118,7 +118,7 @@
 
                         <article>
                             <a href="menu3.html">
-                                    <img src=".\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" 
+                                    <img src=".\images\restaurants\restaurant_française.jpg" 
                                     alt="Assiette garnie sur table de restaurant"/>
                                         <div class="primary-content__info">
                                             <h4>À La Française</h4>
@@ -137,7 +137,7 @@
 
                         <article>
                             <a href="menu4.html">
-                                    <img src=".\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" 
+                                    <img src=".\images\restaurants\restaurant_délice.jpg" 
                                     alt="Plats garnis sur table de restaurant"/>
                                     <div class="primary-content__info">
                                         <h4>Le Délice Des Sens</h4>
